@@ -1,4 +1,4 @@
-$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.333 2006/03/17 09:39:00 ph10 Exp $
+$Cambridge: exim/exim-doc/doc-txt/ChangeLog,v 1.334 2006/03/17 16:51:45 ph10 Exp $
 
 Change log file for Exim from version 4.21
 -------------------------------------------
@@ -322,6 +322,9 @@ PH/63 Changed the macro HAVE_LOGIN_CAP (see PH/41 for this release above) to
 PH/65 Added configuration files for NetBSD3.
 
 PH/66 Updated OS/Makefile-HP-UX for gcc 4.1.0 with HP-UX 11.
+
+PH/67 Fixed minor infelicity in the sorting of addresses to ensure that IPv6
+      is preferred over IPv4.
 
 
 Exim version 4.60
